--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -224,6 +224,8 @@ The project will have three main parts (you may take part in one, two or all of 
 
 As a result, we want to extend a project "Which ML are you?" [https://github.com/stared/which-ml-are-you](https://github.com/stared/which-ml-are-you) which can be a powerful tool for learning how to use and interpret common information retrieval metrics.
 
+![test image size]({{ site.url }}/img/projects/piotrek.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
 **Programming languages that are going to be used in the project**:
 
 JavaScript
