--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -358,7 +358,7 @@ psychologist with knowledge about developmental disorders
 
 <a id="project7"></a>
 
-## Project 7: alidating quantitative susceptibility mapping (QSM) at 3T and 9.4T
+## Project 7: Validating quantitative susceptibility mapping (QSM) at 3T and 9.4T
 
 #### Authors: Anastasia Lado, Elisa Tuzzi, Gisela Hagberg
 
