--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -93,7 +93,7 @@ Python
 
 ## Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
 
-#### Authors: Magdalena Sołyga
+#### Authors: Magdalena Sołyga, Elisabetta Messina
 
 <!--
 
