--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -25,13 +25,15 @@ Registration will take place in three rounds and there will be small registratio
 
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
-<!--
-### Payment details
-   * **Bank account:** 
-   * **IBAN**:
-   * **SWIFT/BIC**:
-   * **Transfer title**: 
 
+### Payment details
+   * **Bank account:** Bank Millenium 77 1160 2202 0000 0000 6084 9264
+   * **IBAN**: PL 77 1160 2202 0000 0000 6084 9264
+   * **SWIFT/BIC**: BIGBPLPW
+   * **Transfer title**: Brainhack Warsaw 2020 <first name> <last name>
+
+
+<!--
 For your convenience we prepared a list of nice and friendly hotels where you get a special Brainhack Warsaw discount:
 
 
