--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -33,12 +33,19 @@ If you have any questions or queries about fees, please write to us: [brainhackw
    * **Transfer title**: Brainhack Warsaw 2020 <first name> <last name>
 
 
-<!--
+
 For your convenience we prepared a list of nice and friendly hotels where you get a special Brainhack Warsaw discount:
+* **Moon hostel**  - 10% discount with the password of *brainhack warsaw*
+* **Lwowska hostel** - 15% discount with the password of *Brainhack*, rooms for 4, 6 and 7 persons, free coffee, tea, wifi and bedding,
+well-equipped kitchen (dishes, fridge, induction hob, microwave oven)
+* **Mish Mash Hostel** - 85 PLN/person for rooms for 2 and 4 persons with private bathroom in the rooms or for rooms for 3 people with private bathroom outside the rooms and 170 for DBL rooms, each room has a kettle, coffee, tea, sugar, hairdryer and in the public area there is a fridge and microwave and the password is: *brainhack*
+* **Soundgarden Hotel** - 5% discount with the password of *Brainhack2020*, [here](http://pdfviewer.softgateon.net/?state=%7B%22ids%22:%5B%220B5rVx6XVEtF5eWVidWdfb3VfeGZDamczQ1BvMkRRV0RGX0hV%22%5D,%22action%22:%22open%22,%22userId%22:%22109527909653767579461%22%7D) is the instruction how to make a reservation using the code or you can just go to this [link](www.bit.ly/2sOz5Q8)
+* **Ibis Reduta** - Single room with breakfast - PLN 179 or double room with breakfast (one double bed or two separate beds) - PLN 218 with the password of *Rezerwacje Brainhack*, the offer is valid until February 28, 2020
 
 
 
 
+<!--
 Please send the project proposals before 1st September  2017 to the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 -->
 <!--
