full projects realy bolt

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -12,7 +12,7 @@ color: black
 <a href="{{ url }}index.html#project1"> Project 1: Mentally Disordered Agents </a>
 
 <a href="{{ url }}index.html#project2">Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
-</a> *FULL*
+</a> **FULL**
 
 <a href="{{ url }}index.html#project3">Project 3: Game controlled by SSVEP paradigm using Blinker device (https://braintech.pl/blinker)
 </a>
@@ -21,9 +21,9 @@ color: black
 
 <a href="{{ url }}index.html#project5">Project 5: Talking with Machine Learning models using chatbots</a>
 
-<a href="{{ url }}index.html#project6">Project 6: Reduction of Psychiatric Multimorbidity in a Large Pediatric Sample using EEG and MRI</a> *FULL*
+<a href="{{ url }}index.html#project6">Project 6: Reduction of Psychiatric Multimorbidity in a Large Pediatric Sample using EEG and MRI</a> **FULL**
 
-<a href="{{ url }}index.html#project7">Project 7: Validating quantitative susceptibility mapping (QSM) at 3T and 9.4T</a> *FULL*
+<a href="{{ url }}index.html#project7">Project 7: Validating quantitative susceptibility mapping (QSM) at 3T and 9.4T</a> **FULL**
 
 <a href="{{ url }}index.html#project8">Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters</a>
 
