--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -9,7 +9,7 @@ color: black
 --
 
 
-<a href="{{ url }}index.html#project1"> Project 1: Mentally Disordered Agents </a>
+<a href="{{ url }}index.html#project1"> Project 1: Mentally Disordered Agents </a> **FULL**
 
 <a href="{{ url }}index.html#project2">Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
 </a> **FULL**
