--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -15,7 +15,7 @@ color: black
 </a> **FULL**
 
 <a href="{{ url }}index.html#project3">Project 3: Game controlled by SSVEP paradigm using Blinker device (https://braintech.pl/blinker)
-</a>
+</a> **FULL**
 
 <a href="{{ url }}index.html#project4">Project 4: False positives visualized - an explorable exploration</a>
 
