project 4 problem description

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -27,7 +27,7 @@ color: black
 
 <a href="{{ url }}index.html#project8">Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters</a>
 
-<a href="{{ url }}index.html#project9">Project 9: Enhancing SSVEP detection with frequency hopping</a>
+<a href="{{ url }}index.html#project9">Project 9: Enhancing SSVEP detection with frequency hopping</a> **FULL**
 
 <br>
 <br>
@@ -233,7 +233,7 @@ JavaScript
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
 Please send via email your solution to one of the following problems:
-1. Develop a small Vue.js application, details will be available later,
+1. Develop a small Vue.js application with a visualization of a ROC curve,
 2. Present shortly an example of your choice where precision-recall trade-off can occur and explain what consequences each option may cause. Propose a way of narration and corresponding problem/data visualization design, e.g. (in a form of a drawing). Example interesting areas: health, crime, security.
 
 **What participants gain/learn from this project:**
@@ -241,9 +241,9 @@ Please send via email your solution to one of the following problems:
 1. Presenting scientific content in an accessible way
 2. Developing a Vue.js application for interactive data visualization
 
-If you decided to apply for this project please consider that you are asked to write a Vue.js application with a visualization of a ROC curve. Along with the registration through our form, please prepare the given application and send this solution to your potential project leaders at: **pmigdal@gmail.com** <br>
+If you decided to apply for this project please consider that you are asked to make one of the proposed problems. Along with the registration through our form, please prepare the given application and send this solution to your potential project leaders at: **pmigdal@gmail.com** <br>
 Your email communication should then consist of:
-1. Your Vue.js application presenting an ROC curve
+1. Your solution to one of the problems
 2. Information about which place on your desired project list this project has (is it your first or for example second choice)
 
 **A list of 1-5 key papers / online materials summarising the subject:**
