--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -1,23 +1,24 @@
 ---
-title: "cancel"
-bg: light_orange
+title: "intro"
+bg: main_white
 color: main_gray
 style: center
 ---
 
-![Exclemation mark](img/em.png)
+![Brainhack Warsaw](img/banner-fb.png)
 
-## Important notice!
+## Let's Brainhack hihihaha!
 
-We regret to inform you that due to the closing of the University of Warsaw during the Coronavirus epidemic, we are for now **cancelling Brainhack Warsaw 2020**. All the events until 30th of April 2020, including classes and lectures, are to be withdrawn.
+### **27-29.03.2019** @  University of Warsaw
 
-Remember - safety always comes first, and once we fight the epidemic I am sure we will all be hungry and ready to brainhack like never before!
 
-We want to **thank each and every one of you**, we know that you put a lot of work to come here. We really appreciate your commitment and **it will not go to waste**.
+#### ❤️❤️❤️
 
-We will do our best to **make Brainhack Warsaw 2020 take place as soon as possible**. If current project leaders decide to submit their projects again, participants who have signed up to them will have priority to participate. So keep your eyes open wide for the near future! 
+<br>
 
-We are very sorry for the situation and if you have any questions please contact us. Keep warm and take care of yourself and your health. In those times the best we all can do is be loving and caring towards one another. 
-
-With all the brainhack love,
-**Brainhack Warsaw 2020 Committee**
+<a href="https://web.facebook.com/brainhackWAW" target="_blank">
+ <img src="img/fb_ico.png" alt="Facebook">
+</a>
+<a href="https://twitter.com/brainhackW" target="_blank">
+  <img src="img/twitter_ico.png" alt="Twitter">
+</a>
