--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -7,7 +7,7 @@ style: center
 
 ![Brainhack Warsaw](img/banner-fb.png)
 
-## Let's Brainhack hihihaha!
+## Let's Brainhack
 
 ### **27-29.03.2019** @  University of Warsaw
 
